Commit before adding media queries and changing some pixel values on REM.

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -21,11 +21,11 @@ body {
 }
 
 section {
-	padding: 12.5rem 0 10rem;
+	padding: 8rem 0;
 }
 
 .container {
-	max-width: 1440px;
+	max-width: 1040px;
 	margin: 0 auto;
 }
 
