--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -1,12 +1,13 @@
 .banner {
-	position: absolute;
-	left: 50%;
-	top: 60%;
-	transform: translate(-50%, -50%);
+	// position: absolute;
+	// left: 50%;
+	// top: 60%;
+	// transform: translate(-50%, -50%);
+	height: 100%;
 	width: 100%;
 
 	&__logo {
 		text-align: center;
-		margin-bottom: 20px;
+		margin: 8rem 0 2rem;
 	}
 }
