--- a/scss/components/_box.scss
+++ b/scss/components/_box.scss
@@ -1,5 +1,5 @@
 .box {
-	width: 100%;
+	max-width: 1040px;
 	margin: 0 auto;
 
 	&__list {
@@ -12,11 +12,11 @@
 			flex-shrink: 0;
 			flex-basis: calc(100% / 3 - 36px);
 			width: 43.8rem;
-			height: 31.5rem;
+			height: 25rem;
 			background-position: center;
 			background-repeat: no-repeat;
+			background-size: 60%;
 			margin: 18px;
-			// padding: 10rem;
 		}		
 	}
 
