--- a/scss/layout/_main-hero.scss
+++ b/scss/layout/_main-hero.scss
@@ -2,10 +2,8 @@
     background: $color-primary;
     min-height: 100vh;
     width:100%;
-    padding: calc(120px + 133px) 0 120px;
-
-    .container {
-    	position: relative;
-    	height: 100%;
-    }
+    padding-top: 8.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
