--- a/scss/layout/_page-header.scss
+++ b/scss/layout/_page-header.scss
@@ -1,6 +1,6 @@
 .page-header {
     background: $color-secondary;
-    height: 13.3rem;
+    height: 8.5rem;
     width:100%;
     position: fixed;
     left:0;
@@ -13,10 +13,12 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding: 0 20px;
     }
 }
 
 .logo {
+    // margin-right: 30px;
 
     &__link {
         text-decoration: none;
