--- a/scss/layout/_main-hero.scss
+++ b/scss/layout/_main-hero.scss
@@ -1,9 +1,16 @@
 .main-hero {
     background: $color-primary;
     min-height: 100vh;
-    width:100%;
+    width: 100%;
     padding-top: 8.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media (max-width:680px) {
+
+    .main-hero {
+        padding-top: 116px;
+    }
 }
