--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -17,7 +17,6 @@ body {
 	font-weight: 400;
 	color: $color-white;
 	line-height: 1.7;
-	background: gray;
 }
 
 section {
@@ -31,4 +30,21 @@ section {
 
 .col-1-3 {
 	width: calc(100% / 3);
+}
+
+@media (max-width: 1140px) {}
+@media (max-width: 960px) {
+	html {
+		font-size: 50%;
+	}
+}
+@media (max-width: 720px) {}
+@media (max-width: 540px) {
+	html {
+		font-size: 37.5%;
+	}
+
+	section {
+		padding: 5rem 0;
+	}
 }
