--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,10 +1,8 @@
 .section-title {
-	font-size: 2.6rem;
 	line-height: 1;
 	color: $color-tertiary;
 	text-align: center;
 	text-transform: uppercase;
-	margin-bottom: 10rem;
 	position: relative;
 	width: 100%;
 	margin-bottom: 7.8rem;
@@ -17,7 +15,7 @@
 		line-height: 1;
 		position: absolute;
 		left: 50%;
-		bottom: -15px;
+		bottom: -1.5rem;
 		transform: translate(-50%, 100%);
 	}
 
@@ -27,20 +25,20 @@
 
 		&:before {
 			content: "";
-			border-top: 4px solid $color-tertiary;
+			border-top: 0.4rem solid $color-tertiary;
 			width: 8rem;
 			position: absolute;
-			bottom: -28px;
+			bottom: -2.8rem;
 			left: 50%;
 			transform: translate(-125%, 100%);
 		}
 
 		&:after {
 			content: "";
-			border-top: 4px solid $color-tertiary;
+			border-top: 0.4rem solid $color-tertiary;
 			width: 8rem;
 			position: absolute;
-			bottom: -28px;
+			bottom: -2.8rem;
 			right: 50%;
 			transform: translate(125%, 100%);			
 		}	
@@ -81,6 +79,10 @@
 	&--portfolio {
 		margin-bottom: calc(7.8rem - 18px);
 	}
+
+	h2 {
+		font-size: 3.8rem;
+	}
 }
 
 .paragraph {
@@ -98,5 +100,43 @@
 	    column-count: 2;
 	    column-gap: 16px;
 	    column-width: 248px;
+	    text-align: left;
+	}
+}
+
+@media (max-width: 1140px) {}
+@media (max-width: 960px) {
+
+	.section-title {
+
+		&--portfolio {
+			margin-bottom: calc(7.8rem - 9px);
+		}		
+	}
+
+	.paragraph {
+
+		&--banner {
+			font-size: 2rem;
+		}
+	}
+}
+@media (max-width: 720px) {
+
+	.section-title {
+
+		h1 {
+			font-size: 5rem;
+			line-height: 5rem;
+		}		
+	}
+}
+@media (max-width: 540px) {
+
+	.paragraph {
+
+		&--about {
+		    text-align: justify;
+		}
 	}
 }
