--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -1,13 +1,28 @@
 .banner {
-	// position: absolute;
-	// left: 50%;
-	// top: 60%;
-	// transform: translate(-50%, -50%);
 	height: 100%;
 	width: 100%;
 
 	&__logo {
 		text-align: center;
 		margin: 8rem 0 2rem;
+	}
+}
+
+@media (max-width: 1140px) {}
+@media (max-width: 960px) {}
+@media (max-width: 720px) {
+	.banner {
+
+		&__logo {
+
+			img {
+				width: 45%;
+			}
+		}
+	}
+}
+@media (max-width: 540px) {
+	.banner {
+		padding: 0 20px;
 	}
 }
