--- a/scss/components/_box.scss
+++ b/scss/components/_box.scss
@@ -11,8 +11,7 @@
 			flex-grow: 0;
 			flex-shrink: 0;
 			flex-basis: calc(100% / 3 - 36px);
-			width: 43.8rem;
-			height: 25rem;
+			height: 230px;
 			background-position: center;
 			background-repeat: no-repeat;
 			background-size: 60%;
@@ -53,8 +52,9 @@
 
 
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 1140px) {
 	.box {
+		max-width: calc(1040px * 2/3);
 
 		&__list {
 
@@ -65,13 +65,43 @@
 	}
 }
 
-@media (max-width: 530px) {
+@media only screen and (max-width: 960px) {
 	.box {
+		max-width: calc(1040px * 2/3);
 
 		&__list {
 
 			&-item {
-				flex-basis: calc(100% - 36px);
+				flex-basis: calc(50% - 18px);
+				margin: 9px;
+			}				
+		}
+	}
+}
+
+@media (max-width: 720px) {
+	.box {
+		&__list {
+
+			&-item {
+				flex-basis: calc(50% - 18px);
+				margin: 9px;
+				height: calc(158px + 10vw);
+			}				
+		}
+	}	
+}
+
+@media (max-width: 530px) {
+	.box {
+		max-width: calc(1040px * 1/3);
+
+		&__list {
+
+			&-item {
+				flex-basis: calc(100% - 18px);
+				height: 230px;
+				margin: 9px;
 			}				
 		}
 	}
