--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -10,6 +10,7 @@
 	text-transform: uppercase;
 	text-decoration: none;
 	box-shadow: inset 0 0 0 2px;
+	cursor: pointer;
 
 	&--about {
 		text-align: center;
@@ -31,7 +32,7 @@
 
 	&--form {
 		width: 80px;
-		font-size: 1.2rem;
+		font-size: 1.5rem;
 		font-weight: 400;
 		outline: hidden;
 		box-shadow: none;
@@ -43,4 +44,22 @@
 			box-shadow: 0 1px 10px 3px rgba(#000, .2);
 		}		
 	}
+}
+
+@media (max-width: 1140px) {}
+@media (max-width: 960px) {}
+@media (max-width: 720px) {}
+@media (max-width: 540px) {
+    .btn {
+
+        &--form {
+            width: 160px;
+            font-size: 3rem;
+        }
+
+		&--about {
+			font-size: 2rem;
+			width: 22rem;
+		}
+    }    
 }
