--- a/scss/layout/_page-footer.scss
+++ b/scss/layout/_page-footer.scss
@@ -46,20 +46,37 @@
 
 	&-list {
 		list-style: none;
-		text-align: center;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-evenly;
 
 		li {
 			width: 40px;
 			height: 40px;
-			display: inline-flex;
+			display: flex;
 			border-radius: 50%;
 			box-shadow: inset 0 0 0 2px;
 			justify-content: center;
 			align-items: center;
 			margin: 0 5px 5px 0;
+			cursor: pointer;
 
 			&:last-child {
 				margin: 0;
+			}
+
+			&:hover {
+
+				.fa {
+					color: $color-primary;
+				}
+			}
+		}
+
+		a {
+
+			&:visited {
+				color: $color-white;
 			}
 		}
 
@@ -86,8 +103,46 @@
 }
 
 .page-footer__copyright {
-	font-size: 1rem;
+	font-size: 10px;
 	margin: 0 auto;
 	display: flex;
 	align-items: center;
+}
+
+@media (max-width: 1140px) {}
+@media (max-width: 960px) {
+}
+@media (max-width: 720px) {}
+@media (max-width: 540px) {
+	.page-footer {
+		font-size: 2rem;
+
+		.container {
+			display: flex;
+			flex-direction: column;
+		}
+
+		.col-1-3 {
+			padding: 0 20px;
+			width: 100%;
+			margin-bottom: 20px;
+
+			&:last-child {
+				margin: 0;
+			}
+		}
+
+		&__loc {
+			width: 100%;
+		}
+
+		&__title {
+			font-size: 2.2rem;
+		}
+
+		&__box {
+			width: 70%;
+			margin: 0 auto;
+		}
+	}
 }
