--- a/scss/layout/_page-header.scss
+++ b/scss/layout/_page-header.scss
@@ -1,12 +1,12 @@
 .page-header {
     background: $color-secondary;
     height: 8.5rem;
-    width:100%;
+    width: 100%;
     position: fixed;
-    left:0;
-    top:0;
+    left: 0;
+    top: 0;
     z-index: 1000;
-    transition:0.5s all;
+    transition: 0.5s all;
 
     .container {
         height: 100%;
@@ -18,7 +18,6 @@
 }
 
 .logo {
-    // margin-right: 30px;
 
     &__link {
         text-decoration: none;
@@ -39,11 +38,11 @@
 
     &__list {
         font-size: 1.4rem;
-        list-style:none;
-        padding:0;
-        margin:0;
+        list-style: none;
+        padding: 0;
+        margin: 0;
         display: flex;
-        align-items:center;
+        align-items: center;
         justify-content: flex-end;
 
         a {
@@ -53,37 +52,55 @@
             color: $color-white;
             text-decoration: none;
             font-weight: 600;
+
+            &:hover {
+                box-shadow: inset 0 0 0 2px;
+                color: $color-white;
+            }
         }      
     }
 }    
 
 
 
-@media (max-width:760px) {
+@media (max-width:680px) {
 
     .page-header {
         position: absolute;
-        background: none;
-        transition: none;
-        box-shadow: none;
-    }
-
-    .page-header {
-        height:auto;
-        min-height:120px;
-
-        &__logo {
-            margin-bottom: 5rem;
-        }
+        height: 116px;
 
         .nav__list {
             justify-content: center;
         }
 
         .container {
-            justify-content:center;
+            justify-content: center;
             flex-direction: column;
-            padding:30px 0;
+            padding: 10px 0;
+        }
+    }
+
+    .logo {
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 540px) {
+
+    .logo {
+
+        &__link {
+
+            &-txt {
+                font-size: 3.8rem;
+            }
+        }
+    }
+
+    .nav {
+
+        &__list {
+            font-size: 1.8rem;     
         }
     }
 }
